Edicao do museu.httml
Adicao de IDs e temas de museus

--- a/static/museu.html
+++ b/static/museu.html
@@ -134,11 +134,11 @@
             <span class="logo">Museus LESI</span>
             <div data-thq="thq-navbar-nav" class="museu-desktop-menu">
               <nav class="museu-links">
-                <span class="bodySmall">História</span>
-                <span class="museu-nav22 bodySmall">Arte</span>
-                <span class="museu-nav32 bodySmall">Cultura</span>
-                <span class="museu-nav42 bodySmall">Ciências</span>
-                <span class="museu-nav52 bodySmall">Temáticos</span>
+                <a rel="noopener" target="_blank" href="#historia" class="museu-nav22 bodySmall">Historia</a>
+                <a rel="noopener" target="_blank" href="#arte" class="museu-nav22 bodySmall">Arte</a>
+                <a rel="noopener" target="_blank" href="#cultura" class="museu-nav22 bodySmall">Cultura</a>
+                <a rel="noopener" target="_blank" href="#ciencia" class="museu-nav22 bodySmall">Ciencia</a>
+                <a rel="noopener" target="_blank" href="#tematico" class="museu-nav22 bodySmall">Tematico</a>
               </nav>
               <div class="museu-buttons">
                 <button class="museu-login buttonFlat">Entrar</button>
@@ -247,7 +247,7 @@
         <div class="logos9-container thq-section-padding">
           <div class="logos9-max-width thq-section-max-width">
             <h2 class="logos9-text thq-heading-2">
-              <span>Explore our Museums</span>
+              <span>Explore os nossos Museus</span>
             </h2>
           </div>
           <div
@@ -292,7 +292,7 @@
                 class="logos9-logo11 thq-img-ratio-16-9"
               />
               <img
-                alt="Museu de Arte Moderna logo"
+                alt="Museu de Art logo"
                 src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/84ec08e8-34e9-42c7-9445-d2806d156403/2cf31efa-183b-4247-920e-60025ea69bfe?org_if_sml=1&amp;q=80&amp;force_format=original"
                 class="logos9-logo21 thq-img-ratio-16-9"
               />
@@ -346,16 +346,11 @@
           <div class="gallery1-max-width thq-section-max-width">
             <div class="gallery1-section-title">
               <h2 class="gallery1-text thq-heading-2">
-                <span>Photo Gallery of the Services you provide</span>
+                <span>Exploração de Museus Parceiros</span>
               </h2>
               <span class="gallery1-text1 thq-body-large">
                 <span>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Suspendisse varius enim in eros elementum tristique. Duis
-                  cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
-                  commodo diam libero vitae erat. Suspendisse varius enim in
-                  eros elementum tristique. Duis cursus, mi quis viverra ornare,
-                  eros dolor interdum nulla.
+                  Descubra uma rede de museus em todo o país. Tenha acesso a uma variedade de museus parceiros com diferentes temáticas e coleções para explorar.
                 </span>
               </span>
             </div>
@@ -370,7 +365,7 @@
               <div class="gallery1-container1">
                 <img
                   alt="Escultura contemporânea em destaque no Museu de Serralves"
-                  src="https://play.teleporthq.io/static/svg/default-img.svg"
+                  src="..\public\img\ArtImagem.jpg"
                   class="thq-img-ratio-4-3"
                 />
               </div>
@@ -388,24 +383,23 @@
           <div class="features17-max-width thq-section-max-width">
             <div class="features17-image-container">
               <img
-                alt="Imagem de museus parceiros"
-                src="https://play.teleporthq.io/static/svg/default-img.svg"
+                alt="Imagem de historia"
+                src="../public\img\MuseuHistoria.jpg"
                 class="thq-img-ratio-16-9"
               />
             </div>
             <div class="features17-content">
               <div class="features17-section-title">
                 <span class="thq-body-small">
-                  <span>Descubra uma rede de museus em todo o país</span>
+                  <span>Descubra a Historia do nosso mundo</span>
                 </span>
                 <div class="features17-content1">
                   <h2 class="thq-heading-2">
-                    <span>Exploração de Museus Parceiros</span>
+                    <h2 id="historia" class="thq-heading-2"><span>Historia</span></h2>
                   </h2>
                   <p class="thq-body-large">
                     <span>
-                      Tenha acesso a uma variedade de museus parceiros com
-                      diferentes temáticas e coleções para explorar.
+                      Descubra a riqueza cultural e histórica dos museus, onde o passado ganha vida através de coleções fascinantes e exposições interativas.
                     </span>
                   </p>
                 </div>
@@ -418,10 +412,10 @@
             <div class="features181-content">
               <div class="features181-section-title">
                 <span class="thq-body-small">
-                  <span>Descubra a arte do século XX</span>
+                  <span>Descubra as obras de artistas de todo o mundo </span>
                 </span>
                 <div class="features181-content1">
-                  <h2 class="thq-heading-2"><span>Arte Moderna</span></h2>
+                  <h2 id="arte" class="thq-heading-2"><span>Arte</span></h2>
                   <p class="thq-body-large">
                     <span>
                       Explore as obras mais emblemáticas do movimento de arte
@@ -434,7 +428,7 @@
             <div class="features181-image-container">
               <img
                 alt="Exposição de Arte Moderna"
-                src="https://images.unsplash.com/photo-1515658323406-25d61c141a6e?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w5MTMyMXwwfDF8cmFuZG9tfHx8fHx8fHx8MTcxNzg1ODg2M3w&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080"
+                src="../public\img\MuseuArt.jpg"
                 class="thq-img-ratio-16-9"
               />
             </div>
@@ -444,23 +438,23 @@
           <div class="features171-max-width thq-section-max-width">
             <div class="features171-image-container">
               <img
-                alt="Catálogo Online"
-                src="https://images.unsplash.com/photo-1547636546-42e54cb26e47?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w5MTMyMXwwfDF8cmFuZG9tfHx8fHx8fHx8MTcxNzg1ODg2M3w&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080"
+                alt="MuseuCultura"
+                src="..\public\img\MuseuCultura.jpg"
                 class="thq-img-ratio-16-9"
               />
             </div>
             <div class="features171-content">
               <div class="features171-section-title">
                 <span class="thq-body-small">
-                  <span>Acesso a Exibições dos Museus Parceiros</span>
+                  <span>Acesso a Exibições de culturas exóticas</span>
                 </span>
                 <div class="features171-content1">
-                  <h2 class="thq-heading-2"><span>Catálogo Online</span></h2>
+                  <h2 id="cultura" class="thq-heading-2"><span>Cultura</span></h2>
                   <p class="thq-body-large">
                     <span>
-                      Explore uma variedade de exibições dos museus parceiros em
-                      Portugal a partir do conforto da sua casa, a qualquer
-                      hora.
+                      Mergulhe na diversidade vibrante da cultura, onde tradições,
+                       artes e expressões humanas se entrelaçam para celebrar
+                        a identidade e a criatividade de diferentes povos.
                     </span>
                   </p>
                 </div>
@@ -468,137 +462,57 @@
             </div>
           </div>
         </div>
-        <div class="cta1-container thq-section-padding">
-          <div class="cta1-max-width thq-section-max-width">
-            <div class="cta1-content">
-              <h2 class="cta1-heading1 thq-heading-2">
-                <span>
-                  Call to action that excites the visitor to try your product
+        <div class="features181-layout349 thq-section-padding">
+          <div class="features181-max-width thq-section-max-width">
+            <div class="features181-content">
+              <div class="features181-section-title">
+                <span class="thq-body-small">
+                  <span>Aprenda de forma diferente </span>
                 </span>
-              </h2>
-              <p class="cta1-content1 thq-body-large">
-                <span>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Suspendisse varius enim in eros elementum tristique. Duis
-                  cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
-                  commodo diam libero vitae erat.
-                </span>
-              </p>
-              <div class="cta1-actions">
-                <button class="thq-button-filled cta1-button">
-                  <span class="cta1-action1 thq-body-small">
-                    <span>Main action</span>
-                  </span>
-                </button>
-                <button class="thq-button-outline cta1-button1">
-                  <span class="cta1-action2 thq-body-small">
-                    <span>Secondary action</span>
-                  </span>
-                </button>
+                <div class="features181-content1">
+                  <h2 id="ciencia" class="thq-heading-2"><span>Ciencias</span></h2>
+                  <p class="thq-body-large">
+                    <span>
+                      Explore o universo do conhecimento nos museus de ciências,
+                       onde a curiosidade encontra a inovação através de exposições
+                        interativas e descobertas surpreendentes.
+                    </span>
+                  </p>
+                </div>
               </div>
+            </div>
+            <div class="features181-image-container">
+              <img
+                alt="Exposição de Ciencia"
+                src="../public\img\MuseuCiencia.jpg"
+                class="thq-img-ratio-16-9"
+              />
             </div>
           </div>
         </div>
-        <div class="faq1-faq7 thq-section-padding">
-          <div class="faq1-max-width thq-section-max-width">
-            <div class="thq-flex-column">
-              <h2 class="thq-heading-2"><span>FAQs</span></h2>
-              <p class="faq1-text1 thq-body-large">
-                <span>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Suspendisse varius enim in eros elementum tristique.
-                </span>
-              </p>
+        <div class="features171-layout349 thq-section-padding">
+          <div class="features171-max-width thq-section-max-width">
+            <div class="features171-image-container">
+              <img
+                alt="MuseuTematico"
+                src="..\public\img\MuseuTematico.jpg"
+                class="thq-img-ratio-16-9"
+              />
             </div>
-            <div class="thq-flex-column faq1-list">
-              <div class="faq1-list-item1">
-                <p class="faq1-faq1-question thq-body-large">
-                  <span>
-                    Quais são os benefícios de se tornar um sócio dos Museus
-                    LESI?
-                  </span>
-                </p>
+            <div class="features171-content">
+              <div class="features171-section-title">
                 <span class="thq-body-small">
-                  <span>
-                    Ao se tornar sócio dos Museus LESI, você terá acesso a
-                    descontos exclusivos em ingressos, eventos especiais,
-                    workshops e lojas de museus parceiros.
-                  </span>
+                  <span>Divirta se a aprender</span>
                 </span>
-              </div>
-              <div class="faq1-list-item2">
-                <p class="faq1-faq2-question thq-body-large">
-                  <span>Como posso aderir a um plano de sócio?</span>
-                </p>
-                <span class="thq-body-small">
-                  <span>
-                    Para aderir a um plano de sócio, basta preencher o
-                    formulário de inscrição disponível no nosso site e escolher
-                    o plano que melhor se adequa às suas preferências.
-                  </span>
-                </span>
-              </div>
-              <div class="faq1-list-item3">
-                <p class="faq1-faq3-question thq-body-large">
-                  <span>
-                    Quais tipos de museus posso encontrar nos Museus LESI?
-                  </span>
-                </p>
-                <span class="thq-body-small">
-                  <span>
-                    Nos Museus LESI, você encontrará uma variedade de museus que
-                    abrangem temas como história, arte, cultura e ciências,
-                    proporcionando uma experiência diversificada para os
-                    visitantes.
-                  </span>
-                </span>
-              </div>
-              <div class="faq1-list-item4">
-                <p class="faq1-faq4-question thq-body-large">
-                  <span>
-                    Como faço para descobrir os museus parceiros dos Museus
-                    LESI?
-                  </span>
-                </p>
-                <span class="thq-body-small">
-                  <span>
-                    Você pode encontrar a lista completa de museus parceiros em
-                    nosso site, onde também poderá conhecer mais sobre cada um
-                    deles e os benefícios oferecidos aos sócios.
-                  </span>
-                </span>
-              </div>
-              <div class="faq1-list-item5">
-                <p class="faq1-faq5-question thq-body-large">
-                  <span>
-                    Posso visitar os museus parceiros gratuitamente sendo sócio
-                    dos Museus LESI?
-                  </span>
-                </p>
-                <span class="thq-body-small">
-                  <span>
-                    Sim, como sócio dos Museus LESI, você terá acesso gratuito
-                    aos museus parceiros, além de outros benefícios exclusivos
-                    disponíveis para os nossos membros.
-                  </span>
-                </span>
-              </div>
-            </div>
-            <div class="thq-flex-column">
-              <div class="faq1-content1">
-                <h2 class="thq-heading-2">
-                  <span>Still have a question?</span>
-                </h2>
-                <p class="faq1-text3 thq-body-large">
-                  <span>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </span>
-                </p>
-              </div>
-              <div class="faq1-container">
-                <button class="thq-button-outline faq1-button">
-                  <span class="thq-body-small"><span>Contact</span></span>
-                </button>
+                <div class="features171-content1">
+                  <h2 id="tematico" class="thq-heading-2"><span>Tematico</span></h2>
+                  <p class="thq-body-large">
+                    <span>                
+                      Vivencie um mundo de fantasia e diversão nos museus temáticos,
+                      onde cada exposição transporta os visitantes para universos únicos e imersivos.
+                    </span>
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -607,13 +521,14 @@
           <div class="contact4-max-width thq-section-max-width">
             <div class="contact4-section-title">
               <span class="thq-body-small">
-                <span>Get in touch with us today!</span>
+                <span>Fale connosco hoje!</span>
               </span>
               <div class="contact4-content">
-                <h2 class="thq-heading-2"><span>Contact us</span></h2>
+                <h2 class="thq-heading-2"><span>Contacte nos</span></h2>
                 <p class="thq-body-large">
                   <span>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Fale connosco para obter mais informações sobre os nossos museus parceiros,
+                     exposições em destaque e programas educativos.
                   </span>
                 </p>
               </div>
@@ -630,8 +545,8 @@
                     <h3 class="contact4-text3 thq-heading-3">Email</h3>
                     <p class="contact4-text4 thq-body-large">
                       <span>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Suspendisse varius enim in ero.
+                        Envie as suas perguntas e solicitações para o nosso endereço de email,
+                         onde a nossa equipa está pronta para ajudá-lo.
                       </span>
                     </p>
                   </div>
@@ -651,11 +566,12 @@
                 </svg>
                 <div class="contact4-contact-info1">
                   <div class="contact4-content4">
-                    <h3 class="contact4-text5 thq-heading-3">Phone</h3>
+                    <h3 class="contact4-text5 thq-heading-3">Telemovel</h3>
                     <p class="contact4-text6 thq-body-large">
                       <span>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Suspendisse varius enim in ero.
+                        Ligue diretamente para nós pelo telemóvel para atendimento rápido e personalizado.
+                        <br>
+                        <span>Horário de atendimento: 9h - 18h</span>
                       </span>
                     </p>
                   </div>
@@ -678,13 +594,13 @@
                     <h3 class="contact4-text7 thq-heading-3">Office</h3>
                     <p class="contact4-text8 thq-body-large">
                       <span>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Suspendisse varius enim in ero.
+                        Visite-nos pessoalmente no nosso endereço físico
+                         para uma experiência de atendimento completa e detalhada.
                       </span>
                     </p>
                   </div>
                   <span class="contact4-address thq-body-small">
-                    <span>456 Test Ave, Bucharest</span>
+                    <span>Campus do IPCA, Vila Frescaínha S. Martinho › 4750-810 Barcelos0</span>
                   </span>
                 </div>
               </div>
