--- a/static/index.html
+++ b/static/index.html
@@ -140,8 +140,8 @@
                 <span class="home-nav52 bodySmall">Temáticos</span>
               </nav>
               <div class="home-buttons">
-                <button class="home-login buttonFlat">Entrar</button>
-                <button class="buttonFilled">Registo</button>
+                <button class="home-login buttonFlat" onclick="window.location.href='/login'">Entrar</button>
+                <button class="buttonFilled" onclick="window.location.href='/register'">Registo</button>
               </div>
             </div>
             <div data-thq="thq-burger-menu" class="home-burger-menu">
@@ -215,7 +215,7 @@
               <span class="home-hero-sub-heading bodyLarge">
                 <span>
                   <span>
-                    <span>Immerse Yourself in Creativity and Culture</span>
+                    <span>Explore a criatividade e cultura</span>
                     <span></span>
                   </span>
                   <span>
@@ -238,7 +238,9 @@
                 <button class="home-hero-button1 buttonFilled">
                   Museus parceiros
                 </button>
-                <button class="buttonFlat">Saiba mais...</button>
+                <a href="#descubra">
+                  <button class="buttonFlat">Saiba mais...</button>
+                </a>
               </div>
               <div class="gallery7-gallery3 thq-section-padding">
                 <div class="gallery7-max-width">
@@ -303,7 +305,7 @@
             </div>
           </div>
         </div>
-        <div class="home-features">
+        <div class="home-features" id="descubra">
           <div class="featuresContainer">
             <div class="home-features1">
               <div class="home-container02">
